# gazebo_cave_world

./: CMakeLists.txt  LICENSE  README.md  artifact_positions.md  artifacts_positions.md  cave_world  cave_world1  cave_world2  cave_world3  cave_world4  package.xml
launch/: cave_world.launch  subt_world.launch
models/Apriltag36_11_00015/: model.sdf
models/backpack/: model.sdf
models/cave_3way/: model.config  model.sdf
models/cave_straight/: model.config  model.sdf
models/cave_straight/materials/scripts/: model.material
models/cave_straight/meshes/: cave_straight.dae
models/cave_tile_6_3/: model.config  model.sdf
models/cave_tile_6_3/meshes/: cave_tile_6_3.mtl
models/cave_tile_ramp2/: model.config  model.sdf
models/cave_tile_ramp2/meshes/: cave_tile_ramp2.mtl
models/cave_world/meshes/: cave_world.mtl
models/extinguisher/: model.sdf
models/extinguisher/meshes/: extinguisher.dae
models/survivor/: model.config
models/survivor/meshes/: rescue_randy.dae
worlds/: cave_world.world  subt_world.world
worlds/models/Apriltag36_11_00014/: model.sdf
worlds/models/Apriltag36_11_00016/: model.config  model.sdf
worlds/models/Apriltag36_11_00016/materials/scripts/: Apriltag.material
worlds/models/asphalt_plane/: model-1_4.sdf  model.sdf
worlds/models/backpack/: model.config
worlds/models/backpack/meshes/: backpack.dae
worlds/models/cave_world/: model.config  model.sdf
worlds/models/cave_world/meshes/: cave_world.mtl  cave_world_t.mtl
worlds/models/cave_world_t/: model.config  model.sdf
worlds/models/extinguisher/: model.config
worlds/models/survivor/: model.sdf
