<?xml version="1.0"?>
<package format="2">
  <name>gazebo_cave_world</name>
  <version>1.0.0</version>
  <description>The gazebo cave world. 3D tiles were used from https://subtchallenge.world/openrobotics</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="koval.anton@gmail.com">Anton Koval</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>
</package>
